--- a/Resources/views/bootstrap_navbar.html.twig
+++ b/Resources/views/bootstrap_navbar.html.twig
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
+                        data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -14,7 +14,7 @@
                 <a class="navbar-brand" href="#">{% block brand %}{% endblock brand %}</a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     {% block navbar_left %}
                     {% endblock navbar_left %}
