Enforcing https for stylesheet

--- a/Resources/views/bootstrap.html.twig
+++ b/Resources/views/bootstrap.html.twig
@@ -8,6 +8,6 @@
     <script type="text/javascript" src="https://static.dontdrinkandroot.net/bootstrap/3.3/bootstrap.min.js"></script>
 {% endblock head_javascript %}
 {% block head_stylesheet %}
-    <link rel="stylesheet" type="text/css" href="http://static.dontdrinkandroot.net/design/1.0/style.css"
+    <link rel="stylesheet" type="text/css" href="https://static.dontdrinkandroot.net/design/1.0/style.css"
           media="screen" />
 {% endblock head_stylesheet %}
