Renaming to utils-bundle

--- a/Resources/views/bootstrap_navbar.html.twig
+++ b/Resources/views/bootstrap_navbar.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DdrDontdrinkandrootBundle::bootstrap.html.twig' %}
+{% extends 'DdrUtilsBundle::bootstrap.html.twig' %}
 
 {% block body %}
     {{ parent() }}
