--- a/Resources/views/bootstrap.html.twig
+++ b/Resources/views/bootstrap.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DdrDontdrinkandrootBundle::html5.html.twig' %}
+{% extends 'DdrUtilsBundle::html5.html.twig' %}
 
 {% block head %}
     {{ parent() }}
@@ -6,11 +6,11 @@
 {% endblock head %}
 
 {% block head_javascript %}
-    <script type="text/javascript" src="https://static.dontdrinkandroot.net/jquery/2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://static.dontdrinkandroot.net/bootstrap/3.3/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 {% endblock head_javascript %}
 
 {% block head_stylesheet %}
-    <link rel="stylesheet" type="text/css" href="https://static.dontdrinkandroot.net/design/1.0/style.css"
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
           media="screen" />
 {% endblock head_stylesheet %}
