--- a/Resources/views/html5.html.twig
+++ b/Resources/views/html5.html.twig
@@ -14,6 +14,8 @@
     <body>
     {% block body %}
     {% endblock body %}
+    {% block footer %}
+    {% endblock footer %}
     {% block body_javascript %}
     {% endblock body_javascript %}
     </body>
