--- a/Resources/views/FOSUser/login_bs4.partial.html.twig
+++ b/Resources/views/FOSUser/login_bs4.partial.html.twig
@@ -5,7 +5,7 @@
             <h4 class="card-header">{{ title }}</h4>
             <div class="card-body">
                 {% if error %}
-                    <div class="alert alert-danger">{{ error|trans({}, 'FOSUserBundle') }}</div>
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
 
                 <form action="{{ path("fos_user_security_check") }}" method="post">
